--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +10,7 @@ body {
   width: 100vw;
   height: 100vh;
   background-color: #353535;
+  font-family: "Roboto", "Open Sans", "Noto Serif", "sans-serif";
   display: flex;
   justify-content: center;
   align-items: center;
